PropertyTypeHierarchy
